--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   firebase_database: ^11.1.0
   cloud_firestore: ^5.3.0
   cupertino_icons: ^1.0.8
+  #para carregar Imagem
+  image_picker: ^1.1.2
+  file_selector: ^1.0.3
 
 dev_dependencies:
   flutter_test:
