--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   #para carregar Imagem
   image_picker: ^1.1.2
   file_selector: ^1.0.3
+  firebase_auth: ^5.6.0
 
 dev_dependencies:
   flutter_test:
